2005-04-05 J.R. Heisey <jrheisey@sourceforge.com>
	* src/value.h, src/registers.cc,h, src/processor.cc.h,
	src/preakpoints.cc,h, plat/win32/gpsim.def: Implemented
	classes and functions for displaying the register address
	and possible value for break on read and break on write.

2005-04-05 J.R. Heisey <jrheisey@sourceforge.com>
	* gpsim/main.cc, src/interface.cc, src/gpsim_interface.h,
	cli/cmd_manager.h: Added code to support for an external module to
	access the global ISimConsole object from the Interface class.

2005-04-04 J.R. Heisey <jrheisey@sourceforge.com>
	* src/processor.cc,h: Added the function Processor::IsAddressInRange().
	Use IsAddressInRange() in ProgramMemoryAccess::get_src_line() and
	ProgramMemoryAccess::operator [](unsigned int address)

2005-04-02 Scott Dattalo <scott@dattalo.com>
	* src/processor.cpp: Reverted the change J.R. made on 2005-03-31
	because it breaks the gui for the 18F family of PICs. We'll need
	to come up with another way of solving the initial PC value
	problem.
	
2005-03-31 J.R. Heisey <jrheisey@sourceforge.com>
	* src/processor.cpp: Changed call ProgramCounter->get_PC() to
	ProgramCounter->get_value() to fix a problem where the initial
	position of the PC in the source was not getting set properly.
	Return value is used for indexing into source code line.
	Mostly used by the UI so should not affect behavior.

2005-03-30 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_dump.cc: Changed ram dump command to handle ram sizes
	greater than one byte.
	* cli/cmd_x.cc: Removed call to dump.dump(DUMP_SFRS) since previous
	call to dump.dump(DUMP_RAM) already dump thes sfrs too.ram halt.
	* Cleaned up a couple of GUI error messages. (invalid window handle,
	invalid value strings)

2005-03-24 J.R. Heisey <jrheisey@sourceforge.com>
	* src/breakpoints.cc, src/processor.cc, h, cli/cmd_clear.cc:
	Fixed crash in Breakpoints::clear() that I reintroduced in my last checkin.
	Also Fixed the original memory leak by properly removing chained 